force-app/main/default/objects/Case/fields/plATSName__c.field-meta.xml
<CustomField>
    <fullName>plATSName__c</fullName>
    <inlineHelpText>Choose the ATS for integration from the list. If you have to pick: &apos;Other&apos; make sure you already agreed with Integrations on the Onboarding, otherwise please use the channel: ats_b2b_support</inlineHelpText>
    <label>ATS Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BeeSite</fullName>
            </value>
            <value>
                <fullName>BITE</fullName>
            </value>
            <value>
                <fullName>Cornerstone</fullName>
            </value>
            <value>
                <fullName>Coveto</fullName>
            </value>
            <value>
                <fullName>d.vinci</fullName>
            </value>
            <value>
                <fullName>DigitalRecruiters</fullName>
            </value>
            <value>
                <fullName>engage (Infoniqa)</fullName>
            </value>
            <value>
                <fullName>eRecruiter</fullName>
            </value>
            <value>
                <fullName>Fountain</fullName>
            </value>
            <value>
                <fullName>Greenhouse</fullName>
            </value>
            <value>
                <fullName>heroes</fullName>
            </value>
            <value>
                <fullName>P&amp;I Loga</fullName>
            </value>
            <value>
                <fullName>Personio</fullName>
            </value>
            <value>
                <fullName>recruitee</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>SAP Successfactor</fullName>
            </value>
            <value>
                <fullName>SmartRecruiters</fullName>
            </value>
            <value>
                <fullName>Softgarden</fullName>
            </value>
            <value>
                <fullName>Talention</fullName>
            </value>
            <value>
                <fullName>Talentsoft</fullName>
            </value>
            <value>
                <fullName>TeamTailor</fullName>
            </value>
            <value>
                <fullName>Workday</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Onlyfy (previously Prescreen)</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>AFAS Software</fullName>
            </value>
            <value>
                <fullName>Artemis</fullName>
            </value>
            <value>
                <fullName>Ashby</fullName>
            </value>
            <value>
                <fullName>ATS WorkExperts</fullName>
            </value>
            <value>
                <fullName>Avature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>