force-app/main/default/objects/Case/fields/plCloseStatus__c.field-meta.xml
<CustomField>
    <fullName>plCloseStatus__c</fullName>
    <description>Used in quick action to rebuild case closing screen</description>
    <label>Close Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Job Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>