force-app/main/default/objects/Case/fields/plJobboards__c.field-meta.xml
<CustomField>
    <fullName>plJobboards__c</fullName>
    <label>Jobboards</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stepstone</fullName>
            </value>
            <value>
                <fullName>Xing</fullName>
            </value>
            <value>
                <fullName>Stellenanzeigen.de</fullName>
            </value>
            <value>
                <fullName>Yourfirm</fullName>
            </value>
            <value>
                <fullName>MobileJob</fullName>
            </value>
            <value>
                <fullName>Monster</fullName>
            </value>
            <value>
                <fullName>meinestadt</fullName>
            </value>
            <value>
                <fullName>e-Bay Kleinanzeigen</fullName>
            </value>
            <value>
                <fullName>Jobware</fullName>
            </value>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>Jobspreader</fullName>
            </value>
            <value>
                <fullName>Joblift</fullName>
            </value>
            <value>
                <fullName>Jobrapido</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>