force-app/main/default/objects/Case/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>RO - 1547</description>
    <inlineHelpText>Specify if the Product Type is REACH or HIRE to ensure that your case is picked up by the correct team.</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Type</valueSetName>
    </valueSet>
</CustomField>