force-app/main/default/objects/Case/fields/Product_Type_Account__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Account__c</fullName>
    <description>RO-1827</description>
    <formula>NULL</formula>
    <inlineHelpText>Displays the Product Type from the linked account</inlineHelpText>
    <label>Legacy Product Type (Account)</label>
    <type>Text</type>
</CustomField>