force-app/main/default/objects/Case/fields/Reach_Campaign_Duration_months__c.field-meta.xml
<CustomField>
    <fullName>Reach_Campaign_Duration_months__c</fullName>
    <description>RO - 2067</description>
    <inlineHelpText>The number of months the REACH campaign will be active</inlineHelpText>
    <label>Reach Campaign Duration (#months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>