force-app/main/default/objects/Case/fields/Reach_Campaign_Guide__c.field-meta.xml
<CustomField>
    <fullName>Reach_Campaign_Guide__c</fullName>
    <description>RO - 2458</description>
    <inlineHelpText>Link to the REACH Timeline</inlineHelpText>
    <label>REACH Timeline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>