force-app/main/default/objects/Case/fields/REACH_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>REACH_Deal_Type__c</fullName>
    <description>RO - 2068</description>
    <label>REACH Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>REACH_Deal_Type</valueSetName>
    </valueSet>
</CustomField>