force-app/main/default/objects/Case/fields/Reach_Special_termination_right_duration__c.field-meta.xml
<CustomField>
    <fullName>Reach_Special_termination_right_duration__c</fullName>
    <description>RO - 2067</description>
    <inlineHelpText>The amount of months the customer is able to use the special termination rights (Sonderkündigungsrecht)</inlineHelpText>
    <label>Reach Special termination right duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>