force-app/main/default/objects/Case/fields/Reason_for_bad_NPS__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_bad_NPS__c</fullName>
    <label>Legacy Reason for bad NPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zu wenige passende Kandidaten</fullName>
            </value>
            <value>
                <fullName>Zu viele unpassende Kandidaten</fullName>
            </value>
            <value>
                <fullName>Fehlende Qualifikationen</fullName>
            </value>
            <value>
                <fullName>Fehlende Dokumente</fullName>
            </value>
            <value>
                <fullName>Keine Rückmeldung der Kandidaten</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
            <value>
                <fullName>Fehlende Qualifikation</fullName>
            </value>
            <value>
                <fullName>Zu wenige Kandidaten</fullName>
            </value>
            <value>
                <fullName>Too few qualified candidates</fullName>
            </value>
            <value>
                <fullName>Too many unqualified candidates</fullName>
            </value>
            <value>
                <fullName>Missing qualifications</fullName>
            </value>
            <value>
                <fullName>Missing documents</fullName>
            </value>
            <value>
                <fullName>Non-responsive candidates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>