force-app/main/default/objects/Case/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>Shows Record Type Name, used in automations to make set up easier without hard-code</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>