force-app/main/default/objects/Case/fields/Recruiter_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Contact_Information__c</fullName>
    <label>Recruiter Contact Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>