force-app/main/default/objects/Case/fields/Recruiter_for_Job_Ad__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_for_Job_Ad__c</fullName>
    <description>RO-1759 , RO - 2458</description>
    <inlineHelpText>Contact that will be displayed in the Ad. This can also be a dummy. If necessary create User Creation Case for CusOps. For Reach Account: No Access to RP</inlineHelpText>
    <label>Recruiter Name + Email for Job Ad</label>
    <type>TextArea</type>
</CustomField>