force-app/main/default/objects/Case/fields/Recruiter_ID__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_ID__c</fullName>
    <description>RO - 2458</description>
    <inlineHelpText>Backend ID of the recruiter</inlineHelpText>
    <label>Recruiter ID</label>
    <type>TextArea</type>
</CustomField>