force-app/main/default/objects/Case/fields/Recruiter_Name__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Name__c</fullName>
    <label>Recruiter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>