force-app/main/default/objects/Case/fields/Recruiting_Challenges_Andere__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Challenges_Andere__c</fullName>
    <label>Recruiting Challenges Andere</label>
    <length>255</length>
    <type>Text</type>
</CustomField>