force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>RO-1759</description>
    <inlineHelpText>Please select the request type that best fits your needs. Provide any additional details or specific instructions in the description section.</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Campaign</fullName>
            </value>
            <value>
                <fullName>Adjust Campaign</fullName>
            </value>
            <value>
                <fullName>Missing Job</fullName>
            </value>
            <value>
                <fullName>Missing Applications</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>GoHiring</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
            <value>
                <fullName>Connecting Accounts</fullName>
            </value>
            <value>
                <fullName>Account Hierarchies</fullName>
            </value>
            <value>
                <fullName>Budget Request</fullName>
            </value>
            <value>
                <fullName>Account Merge Request</fullName>
            </value>
            <value>
                <fullName>Account Owner Change</fullName>
            </value>
            <value>
                <fullName>Service Country Change</fullName>
            </value>
            <value>
                <fullName>Change Account Information</fullName>
            </value>
            <value>
                <fullName>Increase / Decrease Radius</fullName>
            </value>
            <value>
                <fullName>Title w/ 40 Characters</fullName>
            </value>
            <value>
                <fullName>Jobtype</fullName>
            </value>
            <value>
                <fullName>SQ’s</fullName>
            </value>
            <value>
                <fullName>AGG / FB</fullName>
            </value>
            <value>
                <fullName>Job Extension</fullName>
            </value>
            <value>
                <fullName>Resent Applications</fullName>
            </value>
            <value>
                <fullName>Easy Apply</fullName>
            </value>
            <value>
                <fullName>Activate Branded Ads</fullName>
            </value>
            <value>
                <fullName>Change Location in Job Ad</fullName>
            </value>
            <value>
                <fullName>Change Image in Job Ad</fullName>
            </value>
            <value>
                <fullName>Change Company Name displayed in Job Ad</fullName>
            </value>
            <value>
                <fullName>Exclude a Marketing Channel</fullName>
            </value>
            <value>
                <fullName>Not enough applications</fullName>
            </value>
            <value>
                <fullName>Questions about Feed/Campaign Setup</fullName>
            </value>
            <value>
                <fullName>Not good enough quality of applications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>