force-app/main/default/objects/Case/fields/RP_Account_ready_for_Camapign_Start__c.field-meta.xml
<CustomField>
    <fullName>RP_Account_ready_for_Camapign_Start__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-1759</description>
    <inlineHelpText>[REACH ONLY] Make sure the account is ready for campaign start (Logo, Company Pictures and Description etc.) You can impersonate (ask for temporary access to the REACH account) or create a Case (Case Type: other) for IntOps</inlineHelpText>
    <label>RP Account ready for Camapign Start</label>
    <type>Checkbox</type>
</CustomField>