force-app/main/default/objects/Case/fields/Screening_Question_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Screening_Question_Sheet__c</fullName>
    <description>RO - 2458</description>
    <inlineHelpText>Link to the Screening Question Sheet</inlineHelpText>
    <label>Screening Question Sheet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>