force-app/main/default/objects/Case/fields/Screening_Questions__c.field-meta.xml
<CustomField>
    <fullName>Screening_Questions__c</fullName>
    <description>RO-1759</description>
    <inlineHelpText>Should there be Screening Questions implemented for the Onboarding (if yes, please let us know here and upload the document to Files in account)</inlineHelpText>
    <label>Screening Questions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo_Default_Empty</valueSetName>
    </valueSet>
</CustomField>