force-app/main/default/objects/Case/fields/Segment_V02__c.field-meta.xml
<CustomField>
    <fullName>Segment_V02__c</fullName>
    <formula>Null</formula>
    <label>Legacy Segment V02</label>
    <type>Text</type>
</CustomField>