force-app/main/default/objects/Case/fields/Send_CSAT_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_CSAT_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send CSAT Survey</label>
    <type>Checkbox</type>
</CustomField>