force-app/main/default/objects/Case/fields/Service_Country__c.field-meta.xml
<CustomField>
    <fullName>Service_Country__c</fullName>
    <formula>TEXT(Account.Service_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Country</label>
    <type>Text</type>
</CustomField>