force-app/main/default/objects/Case/fields/Service_Country_Lead__c.field-meta.xml
<CustomField>
    <fullName>Service_Country_Lead__c</fullName>
    <label>Service Country Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>