force-app/main/default/objects/Case/fields/Set_up_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Set_up_Account_Name__c</fullName>
    <label>Set up Account Name:</label>
    <length>250</length>
    <type>Text</type>
</CustomField>