force-app/main/default/objects/Case/fields/SF_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>SF_Duplicate_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-1440</description>
    <inlineHelpText>Only set to true when SF duplicate check process, described on confluence was completed</inlineHelpText>
    <label>SF Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>