force-app/main/default/objects/Case/fields/Special_Client__c.field-meta.xml
<CustomField>
    <fullName>Special_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case field requested from Marie.</description>
    <label>Special Client</label>
    <type>Checkbox</type>
</CustomField>