force-app/main/default/objects/Case/fields/Specific_Invoice_Information__c.field-meta.xml
<CustomField>
    <fullName>Specific_Invoice_Information__c</fullName>
    <label>Specific Invoice Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>