force-app/main/default/objects/Case/fields/Stage_ACM__c.field-meta.xml
<CustomField>
    <fullName>Stage_ACM__c</fullName>
    <label>Account Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stage_ACM</valueSetName>
    </valueSet>
</CustomField>