force-app/main/default/objects/Case/fields/Staging_Backend__c.field-meta.xml
<CustomField>
    <fullName>Staging_Backend__c</fullName>
    <description>RO-1759</description>
    <label>Staging Backend</label>
    <type>TextArea</type>
</CustomField>