force-app/main/default/objects/Case/fields/Test_Account__c.field-meta.xml
<CustomField>
    <fullName>Test_Account__c</fullName>
    <formula>Account.Test_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Account</label>
    <type>Checkbox</type>
</CustomField>