force-app/main/default/objects/Case/fields/Time_Created_To_Closed__c.field-meta.xml
<CustomField>
    <fullName>Time_Created_To_Closed__c</fullName>
    <formula>ClosedDate - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Created to Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>