force-app/main/default/objects/Case/fields/Time_Created_to_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Time_Created_to_Discussion__c</fullName>
    <formula>Timestamp_Discussion_with_Customer_Time__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Created to Discussion with Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>