force-app/main/default/objects/Case/fields/Time_Created_to_Go_Live_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Time_Created_to_Go_Live_Scheduled__c</fullName>
    <formula>Timestamp_Go_Live_Scheduled_Time__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Created to Go-Live Scheduled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>