force-app/main/default/objects/Case/fields/Time_Created_To_Job_Live__c.field-meta.xml
<CustomField>
    <fullName>Time_Created_To_Job_Live__c</fullName>
    <formula>Timestamp_Job_Live_Time__c  - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Created to Job Live</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>