force-app/main/default/objects/Case/fields/Time_Created_to_Lost__c.field-meta.xml
<CustomField>
    <fullName>Time_Created_to_Lost__c</fullName>
    <formula>Timestamp_Lost_Time__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Created to Lost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>