force-app/main/default/objects/Case/fields/Time_Created_To_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Time_Created_To_On_Hold__c</fullName>
    <formula>Timestamp_On_Hold_Time__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Created to On Hold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>