force-app/main/default/objects/Case/fields/Time_Created_to_Preview_Sent__c.field-meta.xml
<CustomField>
    <fullName>Time_Created_to_Preview_Sent__c</fullName>
    <formula>Timestamp_Preview_Sent_Date__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Created to Preview Sent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>