force-app/main/default/objects/Case/fields/Time_Discussion_to_Job_Live__c.field-meta.xml
<CustomField>
    <fullName>Time_Discussion_to_Job_Live__c</fullName>
    <formula>DATEVALUE(ClosedDate) -  TimestampJobLive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Discussion to Job Live</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>