force-app/main/default/objects/Case/fields/Time_Preview_to_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Time_Preview_to_Discussion__c</fullName>
    <formula>TimestampDiscussionwithCustomer__c -  TimestampPreviewSent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Preview to Discussion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>