force-app/main/default/objects/Case/fields/Timestamp_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Closed_Date__c</fullName>
    <label>Timestamp Closed Date</label>
    <type>DateTime</type>
</CustomField>