force-app/main/default/objects/Case/fields/Timestamp_Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Contract_Received__c</fullName>
    <formula>Opportunity__r.dateTimestampContractreceived__c</formula>
    <label>Timestamp Contract Received</label>
    <type>Date</type>
</CustomField>