force-app/main/default/objects/Case/fields/Timestamp_Customer_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Customer_Onboarding__c</fullName>
    <description>RO - 2566</description>
    <label>Timestamp Customer Onboarding</label>
    <type>DateTime</type>
</CustomField>