force-app/main/default/objects/Case/fields/Timestamp_data_complete__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_data_complete__c</fullName>
    <description>RO-1965</description>
    <label>Timestamp data complete</label>
    <type>DateTime</type>
</CustomField>