force-app/main/default/objects/Case/fields/Timestamp_Discussion_with_ACM__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Discussion_with_ACM__c</fullName>
    <label>Timestamp Discussion with ACM</label>
    <type>DateTime</type>
</CustomField>