force-app/main/default/objects/Case/fields/Timestamp_Discussion_with_Customer_Time__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Discussion_with_Customer_Time__c</fullName>
    <label>Timestamp Discussion with Customer Time</label>
    <type>DateTime</type>
</CustomField>