force-app/main/default/objects/Case/fields/Timestamp_Escalated_Time__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Escalated_Time__c</fullName>
    <label>Timestamp Escalated Time</label>
    <type>DateTime</type>
</CustomField>