force-app/main/default/objects/Case/fields/Timestamp_Go_Live_Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Go_Live_Scheduled_Time__c</fullName>
    <label>Timestamp Go-Live Scheduled Time</label>
    <type>DateTime</type>
</CustomField>