force-app/main/default/objects/Case/fields/Timestamp_Internal_Handover__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Internal_Handover__c</fullName>
    <description>RO - 2566</description>
    <label>Timestamp Internal Handover</label>
    <type>DateTime</type>
</CustomField>