force-app/main/default/objects/Case/fields/Timestamp_Job_Live_Time__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Job_Live_Time__c</fullName>
    <label>Timestamp Job Live Time</label>
    <type>DateTime</type>
</CustomField>