force-app/main/default/objects/Case/fields/Timestamp_Lost_Time__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Lost_Time__c</fullName>
    <label>Timestamp Lost Time</label>
    <type>DateTime</type>
</CustomField>