force-app/main/default/objects/Case/fields/Timestamp_On_Hold_Time__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_On_Hold_Time__c</fullName>
    <label>Timestamp On Hold Time</label>
    <type>DateTime</type>
</CustomField>