force-app/main/default/objects/Case/fields/Timestamp_Preview_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Preview_Sent_Date__c</fullName>
    <label>Timestamp Preview Sent Time</label>
    <type>DateTime</type>
</CustomField>