force-app/main/default/objects/Case/fields/Timestamp_Quality_check__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Quality_check__c</fullName>
    <description>RO - 2566</description>
    <label>Timestamp Quality check</label>
    <type>DateTime</type>
</CustomField>