force-app/main/default/objects/Case/fields/Timestamp_SSSU_Case__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_SSSU_Case__c</fullName>
    <label>Timestamp SSSU Case</label>
    <type>Date</type>
</CustomField>