force-app/main/default/objects/Case/fields/Timestamp_Waiting_for_Budget__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Waiting_for_Budget__c</fullName>
    <label>Timestamp Waiting for Budget</label>
    <type>DateTime</type>
</CustomField>