force-app/main/default/objects/Case/fields/Timestamp_Waiting_for_campaign_start__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Waiting_for_campaign_start__c</fullName>
    <description>RO - 2566</description>
    <label>Timestamp Waiting for campaign start</label>
    <type>DateTime</type>
</CustomField>