force-app/main/default/objects/Case/fields/TimestampClosed__c.field-meta.xml
<CustomField>
    <fullName>TimestampClosed__c</fullName>
    <label>Timestamp Closed</label>
    <type>Date</type>
</CustomField>