force-app/main/default/objects/Case/fields/TimestampDiscussionwithCustomer__c.field-meta.xml
<CustomField>
    <fullName>TimestampDiscussionwithCustomer__c</fullName>
    <label>Timestamp Discussion with Customer</label>
    <type>Date</type>
</CustomField>