force-app/main/default/objects/Case/fields/TimestampEscalated__c.field-meta.xml
<CustomField>
    <fullName>TimestampEscalated__c</fullName>
    <label>Timestamp Escalated</label>
    <type>Date</type>
</CustomField>