force-app/main/default/objects/Case/fields/TimestampGoLiveScheduled__c.field-meta.xml
<CustomField>
    <fullName>TimestampGoLiveScheduled__c</fullName>
    <label>Timestamp Go-Live Scheduled</label>
    <type>Date</type>
</CustomField>