force-app/main/default/objects/Case/fields/TimestampJobLive__c.field-meta.xml
<CustomField>
    <fullName>TimestampJobLive__c</fullName>
    <label>Timestamp Job Live</label>
    <type>Date</type>
</CustomField>