force-app/main/default/objects/Case/fields/TimestampLost__c.field-meta.xml
<CustomField>
    <fullName>TimestampLost__c</fullName>
    <label>Timestamp Lost</label>
    <type>Date</type>
</CustomField>