force-app/main/default/objects/Case/fields/TimestampOnHold__c.field-meta.xml
<CustomField>
    <fullName>TimestampOnHold__c</fullName>
    <label>Timestamp On Hold</label>
    <type>Date</type>
</CustomField>