force-app/main/default/objects/Case/fields/TimestampPreviewSent__c.field-meta.xml
<CustomField>
    <fullName>TimestampPreviewSent__c</fullName>
    <label>Timestamp Preview Sent</label>
    <type>Date</type>
</CustomField>