force-app/main/default/objects/Case/fields/TS_Technical_Onboarding_Production__c.field-meta.xml
<CustomField>
    <fullName>TS_Technical_Onboarding_Production__c</fullName>
    <description>RO - 2566</description>
    <label>TS Technical Onboarding : Production</label>
    <type>DateTime</type>
</CustomField>