force-app/main/default/objects/Case/fields/TS_Technical_Onboarding_Ready_to_start__c.field-meta.xml
<CustomField>
    <fullName>TS_Technical_Onboarding_Ready_to_start__c</fullName>
    <description>RO - 2566</description>
    <label>TS Technical Onboarding : Ready to start</label>
    <type>DateTime</type>
</CustomField>