force-app/main/default/objects/Case/fields/txtAdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>txtAdditionalInfo__c</fullName>
    <label>Additional Info</label>
    <type>TextArea</type>
</CustomField>