force-app/main/default/objects/Case/fields/txtCompanyID__c.field-meta.xml
<CustomField>
    <fullName>txtCompanyID__c</fullName>
    <description>This value is synced with the Account. Before entering a value, please make sure that the Account is in the right segment (SMB/LCS). It cant be changed later.</description>
    <inlineHelpText>This value is synced with the Account. Before entering a value, please make sure that the Account is in the right segment (SMB/LCS). It cant be changed later.</inlineHelpText>
    <label>Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>