force-app/main/default/objects/Case/fields/txtContactSalutation__c.field-meta.xml
<CustomField>
    <fullName>txtContactSalutation__c</fullName>
    <label>Contact Salutation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>