force-app/main/default/objects/Case/fields/txtJobId__c.field-meta.xml
<CustomField>
    <fullName>txtJobId__c</fullName>
    <inlineHelpText>Please provide relevant job ID from the BE. If multiple jobs are relevant, let us know in the description</inlineHelpText>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>