force-app/main/default/objects/Case/fields/txtJobTitle__c.field-meta.xml
<CustomField>
    <fullName>txtJobTitle__c</fullName>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>