force-app/main/default/objects/Case/fields/txtPurchaseID__c.field-meta.xml
<CustomField>
    <fullName>txtPurchaseID__c</fullName>
    <label>Purchase ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>