force-app/main/default/objects/Case/fields/tysosla__After_Hours_Case__c.field-meta.xml
<CustomField>
    <fullName>tysosla__After_Hours_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Hours Case</label>
    <type>Checkbox</type>
</CustomField>